# lazy-podcast-mate

./: .env.example  .gitignore  CHANGELOG.md  README.md  README_zh.md  config.yaml  pyproject.toml  requirements.txt
examples/: sample.md
lazy_podcast_mate/: __init__.py  __main__.py  cli.py
lazy_podcast_mate/chunking/: chunker.py  models.py  sentences.py
lazy_podcast_mate/cleaning/: cleaner.py  terms.py  whitespace.py
lazy_podcast_mate/config/: env.py  errors.py  loader.py  logging.py  schema.py
lazy_podcast_mate/ingestion/: encoding.py  errors.py  html.py  loader.py  markdown.py  models.py  placeholders.py  text.py
lazy_podcast_mate/orchestrator/: checkpoints.py  runid.py  runner.py
lazy_podcast_mate/output/: errors.py  filename.py  history.py  id3.py  shownotes.py  writer.py
lazy_podcast_mate/post/: bgm.py  concat.py  denoise.py  errors.py  export.py  fades.py  ffmpeg_check.py  ffmpeg_runner.py  loudnorm.py  pipeline.py
lazy_podcast_mate/script/: anthropic.py  base.py  budget.py  domestic.py  errors.py  openai_compatible.py  persona.py  prompt_builder.py  registry.py  retry.py  stage.py
lazy_podcast_mate/script/prompts/: v1.md  v2.md  v3.md
lazy_podcast_mate/tts/: azure.py  base.py  cosyvoice.py  errors.py  registry.py  retry.py  synthesizer.py  volcano.py
tests/: conftest.py  test_chunking.py  test_cleaning.py  test_config.py  test_ingestion.py  test_loudnorm.py  test_orchestrator.py  test_output.py  test_post.py  test_script.py  test_script_adapters.py  test_shownotes.py  test_tts.py  test_tts_azure.py
(+12 files in other folders)
